testsuite/poke.pkl/optcond-pre-diag-2.pk
/* { dg-do compile } */

type Foo = union { if (1) int i; }; /* { dg-error "not allowed" } */
